# quirc

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.am  Makefile.msc  README  README.md  build.js  buildwasm  configure.ac  index.html  make-quirc-config.sed  quirc.js  quircjs.cpp  rundocker  test.html  test_webrtc.html
cmake/: quirc-config.cmake
demo/: camera.c  camera.h  convert.c  convert.h  demo.c  demo_opencv.cxx  demoutil.c  demoutil.h  dthash.c  dthash.h  mjpeg.c  mjpeg.h  scanner.c
html/: QuircQR.js  index.html  quirc.js  quirc.wasm  style.css
jpeg/: qr-codes-xavier.474x632.raw
js/: QuircQR.js  demo.html  quirc-glue-wrapper.cpp  quirc.cpp  quirc.hpp
lib/: QuircQR.js  build  buildwasm  decode.c  identify.c  main.cpp  quirc-glue-wrapper.cpp  quirc-glue.cpp  quirc-glue.js  quirc.c  quirc.cpp  quirc.h  quirc.hpp  quirc.idl  quirc_internal.h  rawgreyimage.jl  test  test.idl  version_db.c
m4/: empty.dir
tests/: dbgutil.c  dbgutil.h  inspect.c  inspect_opencv.cxx  qrtest.c
